 * \#4265: integrate(sin(m*x)*sin(n*x), x, 0, 2*%pi) unconditionally zero
 * \#4269: plot3d ignores the option gnuplot_postamble
 * \#4287: 2d pretty printer ignores successive empty lines
 * \#4307: partswitch affects op and operatorp
 * \#4325: Maxima can't differentiate beta function
 * \#4349: user-defined rules apply to expressions with square brackets as well as parentheses
 * \#4350: arrayinfo complains "not an array" when supplied a Lisp array or hash table
 * \#4355: documentation for trigvalue etc
 * \#4356: support tracing simplifying functions
 * \#4386: quad_qagi doesn't recognize -inf as equivalent to minf
 * \#4388: tex() output under simp:false, incorrect placement of `+`
 * \#4408: letsimp doesn't simplify before returning result
 * \#4417: letsimp treats minus expressions as -1 times something
 * \#4424: draw2d doesnt accept fill_density in order to create opaque shapes
 * \#4426: Remove repeated function resm1
 * \#4427: Turn number to cell in mark+3@db.lisp
 * \#4430: solve calls eval on its arguments
 * \#4434: polydecomp documentation wrong
 * \#4441: gf_factor in ASDF build
 * \#4442 rationalize applied to subscripted
 * \#4474 "sign: argument cannot be imaginary" in simple substitution
 * \#4475 min/max (%i,...)
 * \#4462 sign(1/sqrt(x))

Unnumbered bugs fixed:
---------------------
 * Correct failing test in share/contrib/diffequations/tests
 * plotdf sliders hidden (reported on the mailing list on 2023/11/26)
 * mailing list 2023-11-25: Possibilities for basic image processing
 * mailing list 2023-09-25: Casting SPELs
 * mailing list 2024-12-24: Typographic Error (xmaxima)

Documentation:
--------------
 * Document colnew share package
 * \#4154: Some info nodes have bad headers (and no "Up"s)
 * HTML files for the manual now have the name of the corresponding section
 * Documentation for display2d_unicode in section "Command Line"

Build system:
-------------
 * Install Maxima icons in an 'icons' subdirectory rather than 'pixmaps'